feat: 오디세이 API 비동기 처리 기능 추가